--- a/ui_packages/v_chat_input_ui/input_example/pubspec_overrides.yaml
+++ b/ui_packages/v_chat_input_ui/input_example/pubspec_overrides.yaml
@@ -1,8 +1,10 @@
-# melos_managed_dependency_overrides: v_chat_input_ui,v_chat_utils
+# melos_managed_dependency_overrides: v_chat_input_ui,v_chat_media_editor,v_chat_utils
 dependency_overrides:
   v_chat_input_ui:
     path: ..
-  v_chat_utils:
-    path: ../../../packages/v_chat_utils
+  v_chat_media_editor:
+    path: ../../v_chat_media_editor
   v_chat_sdk_core:
     path: ../../../packages/v_chat_sdk_core
+  v_chat_utils:
+    path: ../../../packages/v_chat_utils
