--- a/ui_packages/v_chat_input_ui/pubspec.yaml
+++ b/ui_packages/v_chat_input_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_input_ui
 description: v chat text input ui
-version: 0.0.3
+version: 0.0.4
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk
@@ -26,9 +26,11 @@ dependencies:
   giphy_get: ^3.1.1
   v_chat_mention_controller: ^1.0.0
   textless: ^6.6.6
-  v_chat_utils: ^0.0.3
+  v_chat_utils: ^0.0.5
   audio_waveforms: ^1.0.0
   emoji_picker_flutter: ^1.5.1
+  v_chat_media_editor: ^0.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
