--- a/packages/v_chat_sdk_sample/pubspec_overrides.yaml
+++ b/packages/v_chat_sdk_sample/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: v_chat_firebase_fcm,v_chat_sdk_core,v_chat_utils,v_chat_input_ui,v_chat_media_editor,v_chat_message_page,v_chat_room_page,v_chat_voice_player
+# melos_managed_dependency_overrides: v_chat_firebase_fcm,v_chat_input_ui,v_chat_media_editor,v_chat_message_page,v_chat_room_page,v_chat_sdk_core,v_chat_utils,v_chat_voice_player
 dependency_overrides:
   v_chat_firebase_fcm:
     path: ../../push_providers/v_chat_firebase_fcm
