--- a/v_ui_packages/v_chat_room_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   v_chat_input_ui: ^0.0.5
   v_chat_media_editor: ^0.0.4
   auto_direction: ^0.0.6
+  map_launcher: ^2.4.0
   intl: ^0.17.0
   swipe_to: ^1.0.2
   scroll_to_index: ^3.0.1
