--- a/core_packages/v_chat_sdk_sample/pubspec.yaml
+++ b/core_packages/v_chat_sdk_sample/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
     sdk: flutter
   v_chat_sdk_core: ^0.0.2
   v_chat_utils: ^0.0.3
-  v_chat_firebase_fcm:
-    path: ../../push_providers/v_chat_firebase_fcm
+  v_chat_firebase_fcm: ^0.0.1
   v_chat_room_page: ^0.0.1
   animated_login: ^1.5.5
   mime: ^1.0.2
