--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -3,7 +3,7 @@ description: utils for v chat sdk
 version: 0.0.6
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
-repository: https://github.com/hatemragab/v_chat_sdk
+repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -40,6 +40,12 @@ dependencies:
   http_parser: ^4.0.2
   overlay_support: ^2.1.0
   event_bus_plus: ^0.6.1
+  photo_view: ^0.14.0
+  chewie: ^1.3.6
+  video_player: ^2.4.10
+  file_saver: ^0.1.1
+  image_gallery_saver: ^1.7.1
+  path_provider: ^2.0.11
   uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
