--- a/v_shared_packages/v_chat_voice_player/pubspec.yaml
+++ b/v_shared_packages/v_chat_voice_player/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   v_chat_utils: ^0.0.5
   flutter_cache_manager: ^3.3.0
+  flutter_audio_waveforms: ^1.2.1+7
   just_audio: ^0.9.21
 
 dev_dependencies:
