--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.0.6
+version: 0.1.0+4
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
@@ -36,7 +36,6 @@ dependencies:
   collection: ^1.16.0
   platform_device_id: ^1.0.1
   device_info_plus: ^8.0.0
-
   http_parser: ^4.0.2
   overlay_support: ^2.1.0
   event_bus_plus: ^0.6.1
