--- a/v_ui_packages/v_chat_room_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_room_page
 description: v chat rooms page ui.
-version: 0.0.1
+version: 0.1.0+3                        
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/v_ui_packages/v_chat_room_page
@@ -12,14 +12,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.0.6
-  v_chat_sdk_core: ^0.0.3
+  v_chat_utils: ^0.1.0
+  v_chat_sdk_core: ^0.1.0+3
   cached_network_image: ^3.2.3
   flutter_advanced_avatar: ^1.1.0
-  v_chat_voice_player: ^0.0.4
-  v_chat_input_ui: ^0.0.5
-  v_chat_message_page: ^0.0.1
-  v_chat_media_editor: ^0.0.4
+  v_chat_message_page: ^0.1.0+3
+  v_chat_media_editor: ^0.1.0
   map_launcher: ^2.4.0
   flutter_cache_manager: ^3.3.0
   share_plus: ^6.0.1
