--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.1.0+5
+version: 0.2.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
@@ -19,7 +19,7 @@ dependencies:
   cached_network_image: ^3.2.3
   textless: ^6.6.6
   file_picker: ^5.2.5
-  image: ^4.0.10
+  image: ^4.0.11
   url_launcher: ^6.1.8
   image_cropper: ^3.0.1
   wechat_camera_picker: ^3.7.0
@@ -53,7 +53,6 @@ dependencies:
   flutter_advanced_avatar: ^1.1.0
 dev_dependencies:
   flutter_lints: ^2.0.1
-
   lints: ^2.0.1
 
 
