--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 0.1.0+6
+version: 0.2.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_sdk_core
@@ -33,7 +33,7 @@ dependencies:
   meta: ^1.8.0
   flutter_localizations:
     sdk: flutter
-  v_chat_utils: ^0.1.0+5
+  v_chat_utils: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
