--- a/v_shared_packages/v_chat_input_ui/pubspec.yaml
+++ b/v_shared_packages/v_chat_input_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_input_ui
 description: v chat text input ui
-version: 0.1.0
+version: 0.2.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/v_shared_packages/v_chat_input_ui
@@ -22,7 +22,7 @@ dependencies:
   giphy_get: ^3.2.0
   record: ^4.4.4
   v_chat_mention_controller: ^1.0.0
-  v_chat_utils: ^0.1.0+5
+  v_chat_utils: ^0.2.0
   audio_waveforms: ^1.0.1
   emoji_picker_flutter: ^1.5.2
   meta: ^1.8.0
