--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui
-version: 0.1.0+6
+version: 0.2.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk
@@ -12,11 +12,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.1.0+5
-  v_chat_sdk_core: ^0.1.0+6
-  v_chat_voice_player: ^0.1.0+2
-  v_chat_input_ui: ^0.1.0
-  v_chat_media_editor: ^0.1.0
+  v_chat_utils: ^0.2.0
+  v_chat_sdk_core: ^0.2.0
+  v_chat_voice_player: ^0.2.0
+  v_chat_input_ui: ^0.2.0
+  v_chat_media_editor: ^0.2.0
   map_launcher: ^2.4.0
   swipe_to: ^1.0.2
   share_plus: ^6.3.0
