--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.2.0+4
+version: 0.2.1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
