--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   v_chat_utils: ^0.4.1
   flutter_fgbg: ^0.2.2
+  flutter_cache_manager: ^3.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
