--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui
-version: 0.4.3
+version: 0.4.3+1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   v_chat_utils: ^0.4.3
-  v_chat_sdk_core: ^0.4.3
+  v_chat_sdk_core: ^0.4.3+1
   v_chat_voice_player: ^0.4.3
   v_chat_input_ui: ^0.4.3
   v_chat_media_editor: ^0.4.3
