--- a/v_ui_packages/v_chat_web_rtc/pubspec.yaml
+++ b/v_ui_packages/v_chat_web_rtc/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   pip_view: ^0.9.7
   retry: ^3.1.0
   sdp_transform: ^0.3.2
+  stop_watch_timer: ^2.0.0
   v_chat_sdk_core: ^0.4.3+2
   v_chat_utils: ^0.4.3
 
