--- a/v_ui_packages/v_chat_room_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_room_page
 description: v chat rooms page ui.
-version: 0.4.3+2
+version: 0.5.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/v_ui_packages/v_chat_room_page
@@ -12,10 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.4.3
-  v_chat_sdk_core: ^0.4.3+2
-  v_chat_message_page: ^0.4.3+1
-  v_chat_media_editor: ^0.4.3
+  v_chat_utils: ^0.5.0
+  v_chat_sdk_core: ^0.5.0
+  v_chat_message_page: ^0.5.0
+  v_chat_media_editor: ^0.5.0
   cached_network_image: ^3.2.3
   flutter_advanced_avatar: ^1.1.0
   map_launcher: ^2.4.0
