--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   random_string: ^2.3.1
   flutter_fgbg: ^0.2.2
   flutter_cache_manager: ^3.3.0
+  platform_local_notifications: ^0.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
