--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_local_notifications: ^13.0.0
+  universal_html: ^2.0.9
 dev_dependencies:
   flutter_lints: ^2.0.1
   lints: ^2.0.1
