--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   open_file_plus: ^3.4.0
   flutter_cache_manager: ^3.3.0
   meta: ^1.8.0
+  flutter_dropzone: ^3.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
