--- a/v_shared_packages/v_chat_input_ui/pubspec.yaml
+++ b/v_shared_packages/v_chat_input_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_input_ui
 description: v chat text input ui
-version: 0.6.1
+version: 0.6.1+1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_input_ui
@@ -23,7 +23,7 @@ dependencies:
   giphy_get: ^3.2.0
   record: ^4.4.4
   v_chat_mention_controller: ^1.0.0
-  audio_waveforms: ^1.0.2
+  audio_waveforms: ^1.0.1
   emoji_picker_flutter: ^1.5.2
   meta: ^1.8.0
   google_maps_flutter: ^2.2.3
