--- a/v_ui_packages/v_chat_room_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_room_page
 description: v chat rooms page ui.
-version: 0.6.1
+version: 0.6.1+1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_web_rtc
@@ -13,17 +13,16 @@ dependencies:
   flutter:
     sdk: flutter
   v_chat_utils: ^0.6.1
-  v_chat_sdk_core: ^0.6.1
-  v_chat_message_page: ^0.6.1
+  v_chat_sdk_core: ^0.6.1+1
+  v_chat_message_page: ^0.6.1+3
   v_chat_media_editor: ^0.6.1
   cached_network_image: ^3.2.3
   flutter_advanced_avatar: ^1.1.0
-  map_launcher: ^2.4.0
+  map_launcher: ^2.5.0+1
   flutter_cache_manager: ^3.3.0
-  share_plus: ^6.3.0
+  share_plus: ^6.3.1
   loadmore: ^2.0.1
   meta: ^1.8.0
-  auto_size_text: ^3.0.0
   badges: ^3.0.2
 
 
