--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui
-version: 0.6.1+3
+version: 0.6.2
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
@@ -12,11 +12,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.6.1
-  v_chat_sdk_core: ^0.6.1+1
-  v_chat_voice_player: ^0.6.1
-  v_chat_input_ui: ^0.6.1+1
-  v_chat_media_editor: ^0.6.1
+  v_chat_utils: ^0.6.2
+  v_chat_sdk_core: ^0.6.2
+  v_chat_voice_player: ^0.6.2
+  v_chat_input_ui: ^0.6.2
+  v_chat_media_editor: ^0.6.2
   map_launcher: ^2.5.0+1
   swipe_to: ^1.0.2
   share_plus: ^6.3.1
