--- a/v_shared_packages/v_chat_input_ui/pubspec.yaml
+++ b/v_shared_packages/v_chat_input_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_input_ui
 description: v chat text input ui
-version: 0.6.2
+version: 0.7.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_input_ui
@@ -12,18 +12,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.6.2
+  v_chat_utils: ^0.7.0
   permission_handler: ^10.2.0
   stop_watch_timer: ^2.0.0
-#  place_picker: ^0.10.0
-  google_maps_place_picker_mb: ^3.0.1
+  place_picker: ^0.10.0
+#  google_maps_place_picker_mb: ^3.0.1
   latlong2: ^0.8.1
   cross_file: ^0.3.3+4
   path_provider: ^2.0.11
   giphy_get: ^3.2.0
   record: ^4.4.4
   v_chat_mention_controller: ^1.0.0
-  audio_waveforms: ^1.0.1
+  audio_waveforms: 1.0.1
   emoji_picker_flutter: ^1.5.2
   meta: ^1.8.0
   google_maps_flutter: ^2.2.3
