--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   latlong2: ^0.8.1
   path: ^1.8.2
   sqflite: ^2.2.4+1
+  sqflite_common_ffi: ^2.2.1+1
 #  stack_trace: ^1.11.0
   html: ^0.15.1
   objectid: ^2.1.0
@@ -33,6 +34,7 @@ dependencies:
   flutter_fgbg: ^0.2.2
   flutter_cache_manager: ^3.3.0
   platform_local_notifications: ^0.0.2
+  path_provider: ^2.0.13
 dev_dependencies:
   flutter_test:
     sdk: flutter
