--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 0.7.0
+version: 0.7.1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_sdk_core
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.7.0
+  v_chat_utils: ^0.7.1
   http: ^0.13.5
   logging: ^1.1.1
   chopper: ^6.1.1
@@ -22,7 +22,7 @@ dependencies:
   socket_io_client: ^2.0.1
   latlong2: ^0.8.1
   path: ^1.8.2
-  sqflite: ^2.2.4+1
+  sqflite: ^2.2.5
   sqflite_common_ffi: ^2.2.1+1
 #  stack_trace: ^1.11.0
   html: ^0.15.1
@@ -33,7 +33,7 @@ dependencies:
   random_string: ^2.3.1
   flutter_fgbg: ^0.2.2
   flutter_cache_manager: ^3.3.0
-  platform_local_notifications: ^0.0.2
+  platform_local_notifications: ^0.0.3
   path_provider: ^2.0.13
 dev_dependencies:
   flutter_test:
