--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui
-version: 0.7.0+1
+version: 0.7.1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
@@ -12,11 +12,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.7.0
-  v_chat_sdk_core: ^0.7.0
-  v_chat_voice_player: ^0.7.0
-  v_chat_input_ui: ^0.7.0
-  v_chat_media_editor: ^0.7.0
+  v_chat_utils: ^0.7.1
+  v_chat_sdk_core: ^0.7.1
+  v_chat_voice_player: ^0.7.1
+  v_chat_input_ui: ^0.7.1
+  v_chat_media_editor: ^0.7.1
   map_launcher: ^2.5.0+1
   swipe_to: ^1.0.2
   share_plus: ^6.3.1
@@ -26,6 +26,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   meta: ^1.8.0
   flutter_dropzone: ^3.0.5
+  bubble: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
