--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 0.7.1
+version: 0.7.2
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_sdk_core
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.7.1
+  v_chat_utils: ^0.7.2
   http: ^0.13.5
   logging: ^1.1.1
   chopper: ^6.1.1
@@ -25,7 +25,7 @@ dependencies:
   sqflite: ^2.2.5
   sqflite_common_ffi: ^2.2.1+1
 #  stack_trace: ^1.11.0
-  html: ^0.15.1
+  html: ^0.15.2
   objectid: ^2.1.0
   sqlite3_flutter_libs: ^0.5.13
   diacritic: ^0.1.3
@@ -35,6 +35,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   platform_local_notifications: ^0.0.3
   path_provider: ^2.0.13
+  google_api_availability: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
