--- a/core_packages/v_chat_sdk_core/pubspec_overrides.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec_overrides.yaml
@@ -1,2 +1,6 @@
 # melos_managed_dependency_overrides: v_chat_ui,v_chat_utils
-{dependency_overrides: {v_chat_utils: {path: ../v_chat_utils}}}
+
+dependency_overrides:
+  intl: 0.17.0
+  v_chat_utils:
+    path: ../v_chat_utils
