--- a/v_shared_packages/v_chat_receive_share/pubspec_overrides.yaml
+++ b/v_shared_packages/v_chat_receive_share/pubspec_overrides.yaml
@@ -1,5 +1,6 @@
 # melos_managed_dependency_overrides: v_chat_media_editor,v_chat_sdk_core,v_chat_utils
 dependency_overrides:
+  intl: 0.17.0
   v_chat_media_editor:
     path: ../v_chat_media_editor
   v_chat_sdk_core:
