--- a/v_shared_packages/v_chat_voice_player/pubspec.yaml
+++ b/v_shared_packages/v_chat_voice_player/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_voice_player
 description: v chat voice player
-version: 0.7.2+3
+version: 0.7.3
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_voice_player
@@ -12,11 +12,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.7.2
+  v_chat_utils: ^0.7.3
   flutter_cache_manager: ^3.3.0
   meta: ^1.8.0
   audio_waveforms: 1.0.1
-  audioplayers: ^3.0.1
+  just_audio: ^0.9.31
 
 dev_dependencies:
   flutter_test:
