--- a/v_shared_packages/v_chat_voice_player/voice_example/pubspec_overrides.yaml
+++ b/v_shared_packages/v_chat_voice_player/voice_example/pubspec_overrides.yaml
@@ -1,5 +1,6 @@
 # melos_managed_dependency_overrides: v_chat_utils,v_chat_voice_player
 dependency_overrides:
+  intl: 0.17.0
   v_chat_utils:
     path: ../../../core_packages/v_chat_utils
   v_chat_voice_player:
