--- a/v_ui_packages/v_chat_room_page/room_example/pubspec_overrides.yaml
+++ b/v_ui_packages/v_chat_room_page/room_example/pubspec_overrides.yaml
@@ -1,5 +1,6 @@
 # melos_managed_dependency_overrides: v_chat_input_ui,v_chat_media_editor,v_chat_message_page,v_chat_room_page,v_chat_sdk_core,v_chat_utils,v_chat_voice_player
 dependency_overrides:
+  intl: 0.17.0
   v_chat_input_ui:
     path: ../../../v_shared_packages/v_chat_input_ui
   v_chat_media_editor:
