--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 0.7.7
+version: 0.8.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_sdk_core
@@ -12,18 +12,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.7.7
+  v_chat_utils: ^0.8.0
   http: ^0.13.5
   logging: ^1.1.1
   chopper: ^6.1.1
   http_parser: ^4.0.2
   encrypt: ^5.0.1
   crypto: ^3.0.2
-  socket_io_client: ^2.0.1
+  socket_io_client: ^2.0.2
   latlong2: ^0.8.1
   path: ^1.8.2
-  sqflite: ^2.2.5
-  sqflite_common_ffi: ^2.2.1+1
+  sqflite: ^2.2.7
+  sqflite_common_ffi: ^2.2.4
 #  stack_trace: ^1.11.0
   html: ^0.15.2
   objectid: ^2.1.0
@@ -35,7 +35,7 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   platform_local_notifications: ^0.0.3
   path_provider: ^2.0.13
-  google_api_availability: ^4.0.0
+  google_api_availability: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
