--- a/core_packages/v_chat_receive_share/pubspec.yaml
+++ b/core_packages/v_chat_receive_share/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_receive_share
 description: v chat receive share will make your app support share from other apps
-version: 1.1.0
+version: 1.2.0
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_receive_share
@@ -12,10 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^1.1.0
+  v_chat_sdk_core: ^1.2.0
   share_handler: ^0.0.16
-  v_chat_media_editor: ^1.0.2
-  v_platform: ^1.0.4
+  v_chat_media_editor: ^1.2.0+2
+  v_platform: ^1.2.0
   intl: ^0.18.0
 dev_dependencies:
   flutter_test:
