--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui package this package is part of v chat sdk and cant be used alone
-version: 1.1.0
+version: 1.2.0
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
@@ -12,10 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^1.1.0
-  v_chat_input_ui: ^1.0.2
-  v_chat_voice_player: ^1.0.2
-  v_chat_media_editor: ^1.0.2
+  v_chat_sdk_core: ^1.2.0
+  v_chat_input_ui: ^1.2.0
+  v_chat_voice_player: ^1.2.0
+  v_chat_media_editor: ^1.2.0+2
   map_launcher: ^2.5.0+1
   swipe_to: ^1.0.2
   share_plus: ^6.3.1
@@ -26,7 +26,7 @@ dependencies:
   meta: ^1.9.1
   flutter_dropzone: ^3.0.5
   flutter_link_previewer: ^3.2.1
-  v_platform: ^1.0.4
+  v_platform: ^1.2.0
   pasteboard: ^0.2.0
   universal_html: ^2.2.1
   textless: ^6.6.6
@@ -41,7 +41,7 @@ dependencies:
   http: ^0.13.5
   uuid: ^3.0.7
   path_provider: ^2.0.15
-  file_saver: ^0.2.4
+  file_saver: ^0.2.6
   photo_view: ^0.14.0
   chewie: ^1.5.0
   video_player: ^2.6.1
