--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui package this package is part of v chat sdk and cant be used alone
-version: 1.2.0
+version: 1.2.1
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
@@ -12,43 +12,43 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^1.2.0
-  v_chat_input_ui: ^1.2.0
-  v_chat_voice_player: ^1.2.0
-  v_chat_media_editor: ^1.2.0+2
+  v_chat_sdk_core: ^1.2.1
+  v_chat_input_ui: ^1.2.1
+  v_chat_voice_player: ^1.2.1
+  v_chat_media_editor: ^1.2.1
+  flutter_dropzone: ^3.0.5
   map_launcher: ^2.5.0+1
   swipe_to: ^1.0.2
-  share_plus: ^6.3.1
+  share_plus: ^7.1.0
   scroll_to_index: ^3.0.1
   flutter_parsed_text: ^2.2.1
   open_filex: ^4.3.2
-  flutter_cache_manager: ^3.3.0
+  flutter_cache_manager: ^3.3.1
   meta: ^1.9.1
-  flutter_dropzone: ^3.0.5
-  flutter_link_previewer: ^3.2.1
-  v_platform: ^1.2.0
+  flutter_link_previewer: ^3.2.2
+  v_platform: ^1.2.1
   pasteboard: ^0.2.0
   universal_html: ^2.2.1
   textless: ^6.6.6
   adaptive_dialog: ^1.9.0-no-macos.2
   cached_network_image: ^3.2.3
-  url_launcher: ^6.1.11
+  url_launcher: ^6.1.12
   flutter_advanced_avatar: ^1.5.0
   timeago: ^3.4.0
   intl: ^0.18.0
   collection: ^1.17.1
   phosphor_flutter: ^1.4.0
-  http: ^0.13.5
+  http: ^1.1.0
   uuid: ^3.0.7
-  path_provider: ^2.0.15
-  file_saver: ^0.2.6
+  path_provider: ^2.1.0
+  file_saver: ^0.2.8
   photo_view: ^0.14.0
-  chewie: ^1.5.0
-  video_player: ^2.6.1
-  shared_preferences: ^2.1.1
+  chewie: ^1.7.0
+  video_player: ^2.7.0
+  shared_preferences: ^2.2.0
 dev_dependencies:
-  flutter_lints: ^2.0.1
-  lints: ^2.1.0
+  flutter_lints: ^2.0.2
+  lints: ^2.1.1
 
 
 flutter:
